src/grammar.ebnf
<assignment statement> = <identifier> ":=" <expression>

<expression> = <simple expression> | <simple expression> <relational operator> <simple expression> ]

<simple expression> = [ <sign> ] <term> { <adding operator> <term> }

<term> = <factor> { <multiplying operator> <factor> }

<factor> = <identifier> | "(" <expression> ")" | "not" <factor> | <digit>

<relational operator> = "=" | "<>" | "<" | "<=" | ">=" | ">" | "or" | "and"

<adding operator> = "+" | "-"

<multiplying operator> = "*" | "div"

<sign> = "+" | "-" | <empty>

<identifier> = <letter> { <letter> | <digit> }

<digit> = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<letter> = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" |
           "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" |
           "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" |
           "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
